# MCMC

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  graph.dot  manifest.xml
include/: Common.h  DataRetrieval.h  Graph.h  GraphUtils.h  GraphVisualization.h  IO.h  InteractiveSegmenter.h  MCMC.h  MatUtils.h  MathUtils.h  MultiviewProblem.h  MultiviewSegment.h  MultiviewSegmentation.h  MyMath.h  OverSegmentation.h  PlaneLibrary.h  Problem.h  SPGraph.h  SampleModelGenerator.h  Segmentation.h  SegmentationContext.h  Serialization.h  Simulation.h  Statistics.h
include/Segmentation/: disjoint-set.h  segment-graph.h
launch/: simple_seg.launch  simple_seg.vcg
output/: mapping.txt  overSegmentationParams.txt
src/exe/: PatternedMatcher.cpp  SimpleMatcher.cpp  SimpleSeg.cpp  SimpleView.cpp  can05_sampler.cpp
src/libraries/: Graph.cpp  GraphUtils.cpp  GraphVisualization.cpp  IO.cpp  MatUtils.cpp  MathUtils.cpp  MultiviewSegment.cpp  MultiviewSegmentation.cpp  OverSegmentation.cpp  Problem.cpp  SPGraph.cpp  SampleModelGenerator.cpp  Segmentation.cpp  Simulation.cpp  tf_eigen.cpp
src/tests/: test_units.cpp
src/tests/system/: TestGraphConnectedSets.cpp  TestGraphMerge.cpp  TestGraphVisualization.cpp
src/tests/unit/: TestGraphUtils.cpp  TestMatUtils.cpp  TestMathUtils.cpp
tex/: paper.bbl  paper.blg  paper.dvi  paper.tex  references.bib  report1.aux  report1.tex
